--- a/docroot/themes/ghsa_foundation/scss/ghsa/_global.scss
+++ b/docroot/themes/ghsa_foundation/scss/ghsa/_global.scss
@@ -1968,4 +1968,5 @@ footer .contact_email,
 	.block-ghsa-foundation-jumpmenus {
 	    float: right;
 			margin-left: 40px;
+			z-index: 1;
 	}
